Fixed reduce function call to not always call ImmutableCopy